tests/frontend/fail/array/out_of_bounds_storage.act
contract B

constructor
interface constructor()

creates

  int[2] a := [1,2]


transition f
interface f(uint c)

storage

    a[c] := 4
